New in master
=============

Features
--------

* added ``-e``, ``--edit`` parameter to ``new_post`` and ``new_page`` to open
  $EDITOR after creation (Issue #1294)
* added ``scanned`` signal (after posts are scanned) (via Issue #1291)
* added missing ``initialized`` event (after tasks are loaded) (Issue #1291)

Bugfixes
--------

* fixed theme/plugin installation under Python 2.6 (Issue #1298)
* removed ``colorama`` and color support under Windows due to Unicode problems
  (Issue #1288)
* made ``files/assets/css/code.css` work again (Issue #1290)

New in v7.0.0
=============

Features
--------

* Added ``UNSLUGIFY_TITLES`` option for making titles fetched via the
  filename regexp prettier (Issue #1282)
* New dependencies: ``natsort`` (natural sorting in galleries)
  and ``dateutil`` (replaces ``pytz``)
* Nikola.commands are now the user-friendly wrappers from console (Issue #1177)
* Add a ``github_deploy`` command to deploy to GitHub pages (Issue #1208)
* Remove tidy filter (it was broken due to tidy being ancient) (Issue #1164)
* Added ``GENERATE_RSS`` setting to allow disabling RSS in Nikola (Issue #1236)
* Link listings raw sources if COPY_SOURCES is True (Issue #1214)
* Much more powerful ``nikola plugin`` command (Issue #1189)
* More powerful console mode allows access to all nikola commands (Issue #830)
* New ```ROBOTS_EXCLUSIONS``` option listing resources to exclude from sitemap
  and include in new generated /robots.txt (Issue #804)
* Generate sitemapindex containing RSS and sitemap files (Issue #804)
* Support hooks in templates, for use by plugins (Issue #896)
* Use readline if available (Issue #1238)
* Replaced ``READ_MORE_LINK`` with ``INDEX_READ_MORE_LINK`` and
  ``RSS_READ_MORE_LINK`` (Issue #1222)
* Added reading_time, remaining_reading_time, paragraph_count,
  remaining_paragraph_count tags for READ_MORE_LINK (Issue #1220)
* Add canonical link in listings.
* Added support for new meta files that are the same format as 1-file metadata,