@@ -301,7 +301,7 @@ class Nikola(object):
             'SHOW_SOURCELINK': True,
             'SHOW_UNTRANSLATED_POSTS': True,
             'SLUG_TAG_PATH': True,
-            'SOCIAL_BUTTONS_CODE': SOCIAL_BUTTONS_CODE,
+            'SOCIAL_BUTTONS_CODE': '',
             'SITE_URL': 'http://getnikola.com/',
             'STORY_INDEX': False,
             'STRIP_INDEXES': False,
@@ -1496,18 +1496,3 @@ _windows_locale_guesses = {
     "tr_tr": "Turkish",
     "zh_cn": "Chinese_China",  # Chinese (Simplified)
 }
-
-
-SOCIAL_BUTTONS_CODE = """
-<!-- Social buttons -->
-<div id="addthisbox" class="addthis_toolbox addthis_peekaboo_style addthis_default_style addthis_label_style addthis_32x32_style">
-<a class="addthis_button_more">Share</a>
-<ul><li><a class="addthis_button_facebook"></a>
-<li><a class="addthis_button_google_plusone_share"></a>
-<li><a class="addthis_button_linkedin"></a>
-<li><a class="addthis_button_twitter"></a>
-</ul>
-</div>
-<script src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4f7088a56bb93798"></script>
-<!-- End of social buttons -->
-"""
